--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Пирожные и капкейки</title>
+    <link rel="stylesheet" href="./layout.css">
 </head>
-<body>
-    
+<body class="page">
+    <div class="header">
+        <div class="safe-frame">
+            <div class="company-name">Сладкий сундук</div>
+            <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div>
+        </div>
+    </div>
 </body>
 </html>
