--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
             <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div>
         </div>
     </div>
+    <div class="main-screen">
+        <div class="safe-frame">
+            
+        </div>
+    </div>
 </body>
 </html>
