--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     </div>
     <div class="main-screen">
         <div class="safe-frame">
-            
+        </div>
+        <div class="portfolio">
+        </div>
+    </div>
+    <div class="footer"></div>
+        <div class="safe-frame">
+            <!-- <div class="company-name">Сладкий сундук</div>
+            <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div> -->
         </div>
     </div>
 </body>
