--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <div class="main-screen">
         <div class="safe-frame">
         </div>
-        <div class="portfolio">
+        <div class="portfolio-screen">
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="order-screen"> // возможно этот экран поставить внутрь main-screen - попробовать
+        <div class="safe-frame">
+        </div>
+    </div>
+    <div class="footer">
         <div class="safe-frame">
             <!-- <div class="company-name">Сладкий сундук</div>
             <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div> -->
