--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
         </div>
     </div>
     <div class="main-screen">
-        <div class="safe-frame">
-        </div>
-        <div class="portfolio-screen">
+        <div class="safe-frame"></div>
+    </div>
+    <div class="catalog-screen">
+        <div class="safe-frame"></div>
+    </div>
+    <div class="loading-screen">
+        <div class="safe-frame"></div>
+    </div>
+    <div class="question-screen">
+        <div class="safe-frame"></div>
+    </div>
+    <div class="feedback-screen">
+        <div class="visible-feedback-container">
+            <div class="safe-frame"></div>
         </div>
     </div>
-    <div class="order-screen"> // возможно этот экран поставить внутрь main-screen - попробовать
-        <div class="safe-frame">
-        </div>
+    <div class="portfolio-screen"></div>
+    <div class="order-screen">
+        <div class="safe-frame"></div>
     </div>
     <div class="footer">
         <div class="safe-frame">
