--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="page">
     <div class="header">
         <div class="safe-frame">
-            <div class="company-name">Сладкий сундук</div>
+            <div class="company-name"></div>
             <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div>
         </div>
     </div>
