--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body class="page">
     <div class="header">
         <div class="safe-frame">
-            <div class="company-name"></div>
-            <div class="address">г. Санкт Петербург, ул. Куйбышева 31</div>
+            <div class="company-info-container">
+                <div class="company-name"></div>
+                <div class="company-info">
+                    <div class="company-info-item"></div>
+                    <div class="company-info-item"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="main-screen">
