--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <div class="safe-frame"></div>
     </div>
     <div class="footer">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="company-menu-container">
+            </div>
+        </div>
     </div>
 </body>
 </html>
