--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
     </div>
     <div class="footer">
         <div class="safe-frame">
-            <div class="company-menu-container">
+            <div class="company-info-container">
+                <div class="company-name">
+                    <!-- <div class="company-info-item"></div>
+                    <div class="company-info-item"></div>
+                    <div class="company-info-item"></div> -->
+                </div>
+                <div class="company-info">
+                    <!-- <div class="company-info-item"></div>
+                    <div class="company-info-item"></div> -->
+                </div>
             </div>
         </div>
     </div>
