--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
     <div class="footer">
         <div class="safe-frame">
             <div class="company-info-container">
-                <div class="company-name">
-                    <!-- <div class="company-info-item"></div>
-                    <div class="company-info-item"></div>
-                    <div class="company-info-item"></div> -->
+                <div class="company-info">
+                    <div class="company-info-item">gggggggggggggggggggggg</div>
+                    <div class="company-info-item">gggggggggggggg</div>
+                    <div class="company-info-item">ggggggggggggggggggggggg</div>
                 </div>
                 <div class="company-info">
-                    <!-- <div class="company-info-item"></div>
-                    <div class="company-info-item"></div> -->
+                    <div class="company-info-item">yyyyyyyyyyyyyyyyyyy | yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy</div>
                 </div>
             </div>
         </div>
