--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         </div>
     </div>
     <div class="main-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="main-content">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="catalog-screen">
         <div class="safe-frame"></div>
