--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </div>
     </div>
     <div class="catalog-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="catalog-title"></div>
+        </div>
     </div>
     <div class="loading-screen">
         <div class="safe-frame"></div>
