--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="catalog-screen">
         <div class="safe-frame">
             <div class="catalog-title"></div>
+            <div class="catalog"></div>
         </div>
     </div>
     <div class="loading-screen">
