--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </div>
     </div>
     <div class="loading-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="loading-content"></div>
+        </div>
     </div>
     <div class="question-screen">
         <div class="safe-frame"></div>
