--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </div>
     </div>
     <div class="question-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="question-content"></div>
+        </div>
     </div>
     <div class="feedback-screen">
         <div class="safe-frame"></div>
