--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="main-screen">
         <div class="safe-frame">
-            <div class="main-content">
+            <div class="screen-content">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -39,16 +39,18 @@
     </div>
     <div class="loading-screen">
         <div class="safe-frame">
-            <div class="loading-content"></div>
+            <div class="screen-content"></div>
         </div>
     </div>
     <div class="question-screen">
         <div class="safe-frame">
-            <div class="question-content"></div>
+            <div class="screen-content"></div>
         </div>
     </div>
     <div class="feedback-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="screen-content"></div>
+        </div>
     </div>
     <div class="portfolio-screen"></div>
     <div class="order-screen">
