--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
         </div>
     </div>
     <div class="feedback-screen">
-        <div class="safe-frame">
-            <div class="screen-content"></div>
-        </div>
+        <div class="safe-frame"></div>
     </div>
     <div class="portfolio-screen"></div>
     <div class="order-screen">
