--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="catalog-screen">
         <div class="safe-frame">
-            <div class="catalog-title"></div>
+            <div class="screen-title"></div>
             <div class="catalog"></div>
         </div>
     </div>
@@ -48,11 +48,17 @@
         </div>
     </div>
     <div class="feedback-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="screen-title"></div>
+        </div>
     </div>
-    <div class="portfolio-screen"></div>
+    <div class="portfolio-screen">
+        <div class="screen-title"></div>
+    </div>
     <div class="order-screen">
-        <div class="safe-frame"></div>
+        <div class="safe-frame">
+            <div class="screen-title"></div>
+        </div>
     </div>
     <div class="footer">
         <div class="safe-frame">
