--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
     <div class="catalog-screen">
         <div class="safe-frame">
             <div class="screen-title"></div>
-            <div class="catalog"></div>
+            <div class="catalog">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
         </div>
     </div>
     <div class="loading-screen">
