--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <div class="safe-frame">
             <div class="screen-title"></div>
             <div class="catalog">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
+                <div class="catalog-card"></div>
             </div>
         </div>
     </div>
@@ -64,10 +64,23 @@
     </div>
     <div class="portfolio-screen">
         <div class="screen-title"></div>
+        <div class="screen-paragraph"></div>
+        <div class="portfolio">
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+            <div class="portfolio-card"></div>
+        </div>
     </div>
     <div class="order-screen">
         <div class="safe-frame">
             <div class="screen-title"></div>
+            <div class="screen-paragraph"></div>
         </div>
     </div>
     <div class="footer">
