--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         </div>
     </div>
     <div class="feedback-screen">
-        <div class="safe-frame">
-            <div class="screen-title"></div>
+        <div class="screen-title"></div>
+        <div class="carousel">
+            <div class="carousel-item carousel-item-inactive"></div>
+            <div class="carousel-item carousel-item-active"></div>
+            <div class="carousel-item carousel-item-inactive"></div>
         </div>
     </div>
     <div class="portfolio-screen">
