--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-screen">
         <div class="safe-frame">
             <div class="screen-content">
-                <div></div>
+                <div class="note">вкуснейшие</div>
                 <div></div>
                 <div></div>
                 <div>
@@ -49,12 +49,16 @@
     </div>
     <div class="loading-screen">
         <div class="safe-frame">
-            <div class="screen-content"></div>
+            <div class="screen-content">
+                <div class="note">не нашли то что нужно?</div>
+            </div>
         </div>
     </div>
     <div class="question-screen">
         <div class="safe-frame">
-            <div class="screen-content"></div>
+            <div class="screen-content">
+                <div class="note">кто будет готовить?</div>
+            </div>
         </div>
     </div>
     <div class="feedback-screen">
