--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">вкуснейшие</div>
-                <div></div>
+                <div class="screen-title"></div>
                 <div></div>
                 <div>
                     <div></div>
