--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">вкуснейшие</div>
-                <div class="screen-title"></div>
+                <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
                 <div></div>
                 <div>
                     <div></div>
@@ -51,6 +51,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">не нашли то что нужно?</div>
+                <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
             </div>
         </div>
     </div>
@@ -58,6 +59,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">кто будет готовить?</div>
+                <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
             </div>
         </div>
     </div>
