--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">не нашли то что нужно?</div>
-                <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
+                <div class="screen-title">Приготовим заказ любой сложности по фото или эскизу</div>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="safe-frame">
             <div class="screen-content">
                 <div class="note">кто будет готовить?</div>
-                <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
+                <div class="screen-title">Лично приготовлю и всё красиво упакую для вашего события</div>
             </div>
         </div>
     </div>
