--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="screen-content">
                 <div class="note">вкуснейшие</div>
                 <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
-                <div></div>
+                <div class="screen-paragraph">Приготовим за 3 часа в день заказа. Доставка на авто в холодильнике.</div>
                 <div>
-                    <div></div>
+                    <div class="btn">Перейти в каталог</div>
                     <div></div>
                 </div>
             </div>
@@ -52,6 +52,8 @@
             <div class="screen-content">
                 <div class="note">не нашли то что нужно?</div>
                 <div class="screen-title">Приготовим заказ любой сложности по фото или эскизу</div>
+                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
+                <div class="btn">Перейти в каталог</div>
             </div>
         </div>
     </div>
@@ -60,6 +62,10 @@
             <div class="screen-content">
                 <div class="note">кто будет готовить?</div>
                 <div class="screen-title">Лично приготовлю и всё красиво упакую для вашего события</div>
+                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
+                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
+                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
+                <div class="btn">Перейти в каталог</div>
             </div>
         </div>
     </div>
