--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="note">не нашли то что нужно?</div>
                 <div class="screen-title">Приготовим заказ любой сложности по фото или эскизу</div>
                 <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
-                <div class="btn">Перейти в каталог</div>
+                <div class="btn">Загрузить фотографию</div>
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
                 <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
                 <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
                 <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
-                <div class="btn">Перейти в каталог</div>
+                <div class="btn">Задать вопрос Юлии</div>
             </div>
         </div>
     </div>
