--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
         <div class="safe-frame">
             <div class="screen-title"></div>
             <div class="screen-paragraph"></div>
+            <div class="order-container">
+                <div class="order-info">
+                    <div class="order-tel">Номер телефона</div>
+                    <div class="btn">Сделать заказ</div>
+                </div>                
+                <div class="agreement-container">
+                    <div class="agreement-checkbox"></div>
+                    <div class="agreement-text">Нажимая на кнопку, вы соглашаетесь с условиями обработки персональных данных</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
