--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     </div>
     <div class="order-screen">
         <div class="safe-frame">
-            <div class="screen-title"></div>
+            <div class="screen-title">Чтобы сделать заказ</div>
             <div class="screen-paragraph"></div>
-            <div class="order-container">
+            <div class="order-info-container">
                 <div class="order-info">
                     <div class="order-tel">Номер телефона</div>
                     <div class="btn">Сделать заказ</div>
