--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
     </div>
     <div class="order-screen">
         <div class="safe-frame">
-            <div class="screen-title">Чтобы сделать заказ</div>
-            <div class="screen-paragraph"></div>
+            <div class="screen-title">Чтобы сделать заказ, укажите ваш телефон</div>
+            <div class="screen-paragraph">Мы перезвоним в течении 15 минут, чтобы уточнить ваши пожелания</div>
             <div class="order-info-container">
                 <div class="order-info">
-                    <div class="order-tel">Номер телефона</div>
+                    <div class="order-tel-form">Номер телефона</div>
                     <div class="btn">Сделать заказ</div>
                 </div>                
                 <div class="agreement-container">
