--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="catalog-screen">
         <div class="safe-frame">
-            <div class="screen-title"></div>
+            <div class="screen-title">Для любых событий и дорогих вам людей</div>
             <div class="catalog">
                 <div class="catalog-card"></div>
                 <div class="catalog-card"></div>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="feedback-screen">
-        <div class="screen-title"></div>
+        <div class="screen-title">Почитайте отзывы довольных клиентов</div>
         <div class="carousel">
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active"></div>
@@ -78,8 +78,8 @@
         </div>
     </div>
     <div class="portfolio-screen">
-        <div class="screen-title"></div>
-        <div class="screen-paragraph"></div>
+        <div class="screen-title">Сделали более 3.000 заказов за 2 года</div>
+        <div class="screen-paragraph">Посмотрите фото реальных заказов из нашего Instagram</div>
         <div class="portfolio">
             <div class="portfolio-card"></div>
             <div class="portfolio-card"></div>
@@ -95,7 +95,7 @@
     <div class="order-screen">
         <div class="safe-frame">
             <div class="screen-title">Чтобы сделать заказ, укажите ваш телефон</div>
-            <div class="screen-paragraph">Мы перезвоним в течении 15 минут, чтобы уточнить ваши пожелания</div>
+            <div class="screen-paragraph">Мы перезвоним в течение 15 минут, чтобы уточнить ваши пожелания</div>
             <div class="order-info-container">
                 <div class="order-info">
                     <div class="order-tel-form">Номер телефона</div>
