--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <div class="note">вкуснейшие</div>
                 <div class="screen-title">Пирожные и капкейки от 150Р/шт. с доставкой по Санкт Петербургу</div>
                 <div class="screen-paragraph">Приготовим за 3 часа в день заказа. Доставка на авто в холодильнике.</div>
-                <div>
+                <div class="btn-area">
                     <div class="btn">Перейти в каталог</div>
-                    <div></div>
+                    <div class="btn-comment">9 различных видов на выбор</div>
                 </div>
             </div>
         </div>
@@ -62,10 +62,20 @@
             <div class="screen-content">
                 <div class="note">кто будет готовить?</div>
                 <div class="screen-title">Лично приготовлю и всё красиво упакую для вашего события</div>
-                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
-                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
-                <div class="screen-paragraph">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</div>
-                <div class="btn">Задать вопрос Юлии</div>
+                <div class="screen-paragraph">Проконсультирую по выбору капкейков и придумаю нестандартную идею</div>
+                <div class="screen-paragraph">Проконсультирую по выбору капкейков и придумаю нестандартную идею</div>
+                <div class="screen-paragraph">Проконсультирую по выбору капкейков и придумаю нестандартную идею</div>
+                <div class="btn-area">
+                    <div class="btn">Задать вопрос Юлии</div>
+                    <div class="person">
+                        <div class="outline-transform-container person-name-background-container">
+                            <div class="person-item person-name">Юлия Кондратьева</div>
+                        </div>
+                        <div class="outline-transform-container person-profession-background-container">
+                            <div class="person-item person-profession">ВАШ КОНДИТЕР</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
