--- a/index.html
+++ b/index.html
@@ -35,8 +35,28 @@
         <div class="safe-frame">
             <div class="screen-title">Для любых событий и дорогих вам людей</div>
             <div class="catalog">
-                <div class="catalog-card"></div>
-                <div class="catalog-card"></div>
+                <div class="catalog-card">
+                    <div class="image-container">
+                        <img src="./images/catalog-img.svg" alt="Капкейк Кремовый замок">
+                    </div>
+                    <div class="catalog-card-content">
+                        <div class="catalog-card-title">Кремовый замок</div>
+                        <div class="catalog-card-paragraph">Нежный крем любого цвета на выбор, вафельная основа</div>
+                        <div class="catalog-card-price">150 Р/шт.</div>
+                        <div class="btn">Заказать</div>
+                    </div>
+                </div>
+                <div class="catalog-card">
+                    <div class="image-container">
+                        <img src="./images/catalog-img.svg" alt="Капкейк Кремовый замок">
+                    </div>
+                    <div class="catalog-card-content">
+                        <div class="catalog-card-title">Малиновый рай</div>
+                        <div class="catalog-card-paragraph">Воздушный крем, темная основа и ягода малины</div>
+                        <div class="catalog-card-price">150 Р/шт.</div>
+                        <div class="btn">Заказать</div>
+                    </div>
+                </div>
                 <div class="catalog-card"></div>
                 <div class="catalog-card"></div>
                 <div class="catalog-card"></div>
