--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="catalog-card">
                     <div class="image-container">
-                        <img src="./images/catalog-img.svg" alt="Капкейк Кремовый замок">
+                        <img src="./images/catalog-img.svg" alt="Капкейк Малиновый рай">
                     </div>
                     <div class="catalog-card-content">
                         <div class="catalog-card-title">Малиновый рай</div>
@@ -105,6 +105,10 @@
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active"></div>
             <div class="carousel-item carousel-item-inactive"></div>
+        </div>
+        <div class="slider">
+            <div class="slider-item slider-left"></div>
+            <div class="slider-item slider-right"></div>
         </div>
     </div>
     <div class="portfolio-screen">
