--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
         <div class="screen-title">Почитайте отзывы довольных клиентов</div>
         <div class="carousel">
             <div class="carousel-item carousel-item-inactive"></div>
-            <div class="carousel-item carousel-item-active"></div>
+            <div class="carousel-item carousel-item-active">
+                <div class="carousel-item-text-container"></div>
+                <div class="carousel-item-person-container"></div>
+            </div>
             <div class="carousel-item carousel-item-inactive"></div>
         </div>
         <div class="slider">
