--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active">
                 <div class="carousel-item-text-container"></div>
-                <div class="carousel-item-person-container"></div>
+                <div class="carousel-item-person-container">
+                    <div class="carousel-item-person-avatar-container">
+                        <img src="./images/avatar-Irina-Larionova.svg" alt="Фото Ирина Ларионова">
+                    </div>
+                    <div class="carousel-item-person-avatar-name">Ирина Ларионова</div>
+                    <div class="carousel-item-person-avatar-location">Санкт-Петербург</div>
+                </div>
             </div>
             <div class="carousel-item carousel-item-inactive"></div>
         </div>
