--- a/index.html
+++ b/index.html
@@ -104,7 +104,17 @@
         <div class="carousel">
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active">
-                <div class="carousel-item-text-container"></div>
+                <div class="carousel-item-text-container">
+                    <div class="quote-symbol"></div>
+                    <div class="carousel-item-text-title">"Результат дико порадовал, друзья были в восторге"</div>
+                    <div class="carousel-item-text-paragraph">"Заказала капкейки,заказала капкейки заказала капкейки 
+                        заказала капкейки заказала капкейки заказала капкейки заказала капкейки заказала капкейки 
+                        заказала капкейки заказала капкейки заказала капкейки заказала капкейки заказала капкейки 
+                        заказала капкейки заказала капкейки заказала капкейки заказала капкейки заказала капкейки 
+                        заказала капкейки заказала"
+                    </div>
+                    <div class="carousel-item-text-link">Читать отзыв полностью</div>
+                </div>
                 <div class="carousel-item-person-container">
                     <div class="carousel-item-person-avatar-container">
                         <img src="./images/avatar-Irina-Larionova.svg" alt="Фото Ирина Ларионова">
