--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <div class="carousel">
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active">
+            <div class="berry-img"></div>
+            <div class="leaf-img"></div>
                 <div class="carousel-item-text-container">
                     <div class="quote-symbol"></div>
                     <div class="carousel-item-text-title">"Результат дико порадовал, друзья были в восторге"</div>
