--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div class="carousel">
             <div class="carousel-item carousel-item-inactive"></div>
             <div class="carousel-item carousel-item-active">
-            <div class="berry-img"></div>
-            <div class="leaf-img"></div>
+            <div class="feedback-screen-berry-img screen-absolute-img"></div>
+            <div class="feedback-screen-leaf-img screen-absolute-img"></div>
                 <div class="carousel-item-text-container">
                     <div class="quote-symbol"></div>
                     <div class="carousel-item-text-title">"Результат дико порадовал, друзья были в восторге"</div>
@@ -149,6 +149,10 @@
     </div>
     <div class="order-screen">
         <div class="safe-frame">
+            <div class="order-screen-leaf-img-left-top screen-absolute-img"></div>
+            <div class="order-screen-berry-img-right-top screen-absolute-img"></div>
+            <div class="order-screen-leaf-img-right-bottom screen-absolute-img"></div>
+            <div class="order-screen-berry-img-left-bottom screen-absolute-img"></div>
             <div class="screen-title">Чтобы сделать заказ, укажите ваш телефон</div>
             <div class="screen-paragraph">Мы перезвоним в течение 15 минут, чтобы уточнить ваши пожелания</div>
             <div class="order-info-container">
